--- a/app/src/main/res/layout/item_reportlist_detail_child.xml
+++ b/app/src/main/res/layout/item_reportlist_detail_child.xml
@@ -1,80 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/card_margin"
-    android:layout_marginLeft="@dimen/card_margin"
-    android:layout_marginRight="@dimen/card_margin"
-    app:cardCornerRadius="@dimen/card_margin"
-    app:cardUseCompatPadding="true">
-    <!--app:cardCornerRadius="4dp"-->
-    <!--app:cardElevation="5dp"-->
-    <!--app:cardMaxElevation="10dp"-->
-    <!--app:cardPreventCornerOverlap="true"-->
-    <!--app:cardUseCompatPadding="true">-->
+    android:background="@color/white">
 
-
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/userinfo_padding_12dp"
-        android:layout_marginRight="@dimen/userinfo_padding_12dp"
-        android:orientation="vertical"
-        android:paddingBottom="8dp"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
-        android:paddingTop="8dp">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/lineCenter"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/divider"
-            android:layout_below="@+id/tvTitle"
-            android:layout_marginBottom="8dp"
-            android:background="@color/divider_dd"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="阿斯蒂芬"
-            android:textColor="@color/gray_33"
-            android:textSize="@dimen/textsize_h3_16sp" />
-
-        <TextView
-            android:id="@+id/tvResultValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="12"
-            android:textColor="#FFFA7981"
-            android:textSize="@dimen/textsize_h3_16sp" />
-
-        <TextView
-            android:id="@+id/tvSubtitle"
+        <RelativeLayout
+            android:id="@+id/content_summary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/lineCenter"
-            android:layout_marginRight="12dp"
-            android:layout_toLeftOf="@+id/tvUnit"
-            android:text="金鳞岂是池中物"
-            android:textColor="@color/gray_b2"
-            android:textSize="@dimen/textsize_h4" />
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/padding_12dp"
+            android:paddingLeft="@dimen/padding_12dp"
+            android:paddingRight="@dimen/padding_12dp"
+            android:paddingTop="@dimen/padding_12dp"
+            android:visibility="gone">
 
-        <TextView
-            android:id="@+id/tvUnit"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tvSummary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="阿斯蒂芬"
+                android:textColor="@color/main_color_red"
+                android:textSize="@dimen/textsize_h3_16sp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/content_comment"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/lineCenter"
-            android:text="单位:uml/ml"
-            android:textColor="@color/gray_b2"
-            android:textSize="@dimen/textsize_h4" />
-    </RelativeLayout>
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/padding_9dp"
+            android:paddingLeft="@dimen/padding_12dp"
+            android:paddingRight="@dimen/padding_12dp"
+            android:paddingTop="@dimen/padding_9dp">
+
+            <TextView
+                android:id="@+id/lineCenter"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_below="@+id/tvTitle"
+                android:layout_marginBottom="4dp"
+                android:background="@color/divider_dd"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="阿斯蒂芬"
+                android:textColor="@color/gray_33"
+                android:textSize="@dimen/textsize_h3_16sp" />
+
+            <TextView
+                android:id="@+id/tvResultValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="12"
+                android:textColor="@color/gray_33"
+                android:textSize="@dimen/textsize_h3_16sp" />
+
+            <TextView
+                android:id="@+id/tvSubtitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/lineCenter"
+                android:layout_marginRight="8dp"
+                android:layout_toLeftOf="@+id/tvUnit"
+                android:text="金鳞岂是池中物"
+                android:textColor="@color/gray_66"
+                android:textSize="@dimen/textsize_h4" />
+
+            <TextView
+                android:id="@+id/tvUnit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/lineCenter"
+                android:text="单位:uml/ml"
+                android:textColor="@color/gray_66"
+                android:textSize="@dimen/textsize_h4" />
+        </RelativeLayout>
+
+    </FrameLayout>
 
 
-</android.support.v7.widget.CardView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/divider"
+        android:layout_below="@+id/content_item"
+        android:background="@color/divider_dd" />
+
+
+</RelativeLayout>
 
