--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="tab_report_checked">#FFFF4444</color>
 
     <color name="main_color_blue">#309BF2</color>
+    <color name="blue_light">#7BBFF7</color>
     <color name="main_color_red">#F25353</color>
     <color name="main_color_green">#4ED625</color>
 
