--- a/app/src/main/res/color/textcolor_tab_report.xml
+++ b/app/src/main/res/color/textcolor_tab_report.xml
@@ -4,5 +4,5 @@
     <item android:color="@color/white" android:state_checked="true" />
     <item android:color="@color/white" android:state_selected="true" />
     <item android:color="@color/white" android:state_focused="true" />
-    <item android:color="@color/tab_report_checked" />
+    <item android:color="@color/main_color_blue" />
 </selector>
