--- a/app/src/main/res/drawable/shape_center_normal.xml
+++ b/app/src/main/res/drawable/shape_center_normal.xml
@@ -14,10 +14,13 @@
     <item>
         <shape>
             <!--    边框颜色 -->
-            <solid android:color="@color/gray_f2" />
+            <!--<stroke-->
+            <!--android:width="2dp"-->
+            <!--android:color="@color/main_color_blue" />-->
+            <solid android:color="@color/main_color_blue" />
         </shape>
     </item>
-    <!-- 给View的上 左  右设置8dp的边框 -->
+    <!-- 给View的上 左  右设置1dp的边框 -->
     <item
         android:bottom="1dp"
         android:top="1dp">
