--- a/app/src/main/res/drawable/shape_tableft_normal.xml
+++ b/app/src/main/res/drawable/shape_tableft_normal.xml
@@ -2,14 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners
-        android:bottomLeftRadius="@dimen/tab_report_corners"
-        android:topLeftRadius="@dimen/tab_report_corners" />
+        android:bottomLeftRadius="@dimen/bg_corners"
+        android:topLeftRadius="@dimen/bg_corners" />
 
     <solid android:color="@color/white" /><!-- 填充的颜色 -->
 
     <stroke
-        android:width="1dp"
-        android:color="@color/gray_f2"
+        android:width="@dimen/divider"
+        android:color="@color/main_color_blue"
 
         />
 
