--- a/app/src/main/res/drawable/shape_tabright_checked.xml
+++ b/app/src/main/res/drawable/shape_tabright_checked.xml
@@ -2,14 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners
-        android:bottomRightRadius="@dimen/tab_report_corners"
-        android:topRightRadius="@dimen/tab_report_corners" />
+        android:bottomRightRadius="@dimen/bg_corners"
+        android:topRightRadius="@dimen/bg_corners" />
 
-    <solid android:color="@color/tab_report_checked" /><!-- 填充的颜色 -->
+    <solid android:color="@color/main_color_blue" /><!-- 填充的颜色 -->
 
-    <stroke
-        android:width="1dp"
-        android:color="@color/gray_f2" />
+    <!--<stroke-->
+    <!--android:width="1dp"-->
+    <!--android:color="@color/gray_f2" />-->
 
 
 </shape>
