--- a/app/src/main/res/drawable/shape_tabright_normal.xml
+++ b/app/src/main/res/drawable/shape_tabright_normal.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners
-        android:bottomRightRadius="@dimen/tab_report_corners"
-        android:topRightRadius="@dimen/tab_report_corners" />
+        android:bottomRightRadius="@dimen/bg_corners"
+        android:topRightRadius="@dimen/bg_corners" />
 
     <solid android:color="@color/white" /><!-- 填充的颜色 -->
 
     <stroke
-        android:width="1dp"
-        android:color="@color/gray_f2" />
+        android:width="@dimen/divider"
+        android:color="@color/main_color_blue" />
 
 </shape>
