--- a/app/src/main/res/layout/consult_frag.xml
+++ b/app/src/main/res/layout/consult_frag.xml
@@ -90,11 +90,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <include layout="@layout/divider"/>
+        <include layout="@layout/divider_dd"/>
 
         <include layout="@layout/consult_edit_layout" />
 
-        <include layout="@layout/divider"/>
+        <include layout="@layout/divider_dd"/>
 
     </LinearLayout>
 
