--- a/app/src/main/res/layout/item_reportlist_advice.xml
+++ b/app/src/main/res/layout/item_reportlist_advice.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/card_margin"
-    android:layout_marginLeft="@dimen/card_margin"
-    android:layout_marginRight="@dimen/card_margin"
-    app:cardCornerRadius="@dimen/card_margin"
-    app:cardUseCompatPadding="true">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/padding_9dp">
     <!--app:cardCornerRadius="4dp"-->
     <!--app:cardElevation="5dp"-->
     <!--app:cardMaxElevation="10dp"-->
@@ -18,19 +14,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/item_press_white_gray"
+        android:background="@color/white"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:padding="@dimen/userinfo_padding_12dp">
+        android:paddingBottom="@dimen/padding_10dp"
+        android:paddingLeft="@dimen/padding_12dp"
+        android:paddingRight="@dimen/padding_12dp"
+        android:paddingTop="@dimen/padding_10dp">
 
         <TextView
             android:id="@+id/tvReportAdviceTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/androidColorA"
-            android:padding="@dimen/activity_horizontal_margin"
             android:text="颈椎侧位检查"
-            android:textColor="@color/white"
+            android:textColor="@color/gray_33"
             android:textSize="18sp" />
 
         <TextView
@@ -38,15 +35,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginTop="@dimen/padding_15dp"
             android:layout_toRightOf="@+id/img_newslist"
-            android:background="@color/androidColorE"
-            android:padding="@dimen/userinfo_padding_12dp"
-            android:text="    颈椎生理曲度变直，建议专家随访，颈椎生理曲度变直，建议专家随访。颈椎生理曲度变直，建议专家随访，颈椎生理曲度变直，建议专家随访。"
-            android:textColor="@color/white"
+            android:text="颈椎生理曲度变直，建议专家随访，颈椎生理曲度变直，建议专家随访。颈椎生理曲度变直，建议专家随访，颈椎生理曲度变直，建议专家随访。"
+            android:textColor="@color/gray_66"
             android:textSize="16sp" />
 
     </LinearLayout>
 
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
 
