--- a/app/src/main/res/layout/report_error_frag.xml
+++ b/app/src/main/res/layout/report_error_frag.xml
@@ -1,31 +1,26 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_f2"
+    android:orientation="vertical"
     tools:context="com.ihaozuo.plamexam.view.report.ReportErrorFragment">
 
-    <RelativeLayout
+    <include layout="@layout/divider_dd" />
+
+
+    <ListView
+        android:id="@+id/listview_error_report"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:divider="@null"
+        android:scrollbars="none" />
 
-        <ListView
-            android:id="@+id/listview_error_report"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/btnReportError"
-            android:divider="@null"
-            android:scrollbars="none" />
+    <Button
+        android:id="@+id/btnReportError"
+        style="@style/btn_blue_corner"
+        android:layout_alignParentBottom="true"
+        android:text="选择异常项咨询" />
 
-        <Button
-            android:id="@+id/btnReportError"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="12dp"
-            android:layout_marginLeft="48dp"
-            android:layout_marginRight="48dp"
-            android:layout_marginTop="8dp"
-            android:text="选择异常项咨询" />
-    </RelativeLayout>
-
-</FrameLayout>
+</LinearLayout>
