--- a/app/src/main/res/layout/report_list_frag.xml
+++ b/app/src/main/res/layout/report_list_frag.xml
@@ -8,7 +8,8 @@
     <FrameLayout
         android:id="@+id/rLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/gray_f2">
 
         <RelativeLayout
             android:id="@+id/layout_report_add"
@@ -18,12 +19,12 @@
             android:visibility="invisible">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:layout_above="@+id/add"
                 android:layout_centerHorizontal="true"
-                android:padding="@dimen/userinfo_padding_12dp"
-                android:src="@drawable/ic_add_report" />
+                android:layout_marginBottom="@dimen/padding_15dp"
+                android:src="@drawable/ic_report_add" />
 
             <TextView
                 android:id="@+id/add"
@@ -31,7 +32,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="@string/add_report"
-                android:textSize="24sp" />
+                android:textColor="@color/gray_b2"
+                android:textSize="@dimen/textsize_h1" />
 
         </RelativeLayout>
 
