--- a/app/src/main/res/layout/tab_report_layout.xml
+++ b/app/src/main/res/layout/tab_report_layout.xml
@@ -1,84 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="44dp"
-    android:background="@color/androidColorD"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:paddingBottom="@dimen/padding_8dp"
+    android:paddingTop="@dimen/padding_8dp">
 
     <View
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 
     <RadioGroup
         android:id="@+id/groupConsult"
         android:layout_width="wrap_content"
-        android:layout_height="44dp"
-        android:layout_toLeftOf="@+id/right"
-        android:layout_toRightOf="@+id/left"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/rb_error_report"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginBottom="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_weight="1"
+            style="@style/radiobuttom_reporttab"
             android:background="@drawable/bg_tableft_report"
-            android:button="@null"
             android:checked="true"
-            android:gravity="center"
-            android:paddingLeft="16dp"
-            android:paddingRight="8dp"
-            android:text="报告异常"
-            android:textColor="@color/textcolor_tab_report"
-            android:textSize="16sp" />
+            android:text="异常报告" />
 
         <RadioButton
-
             android:id="@+id/rb_detail_report"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginBottom="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_weight="1"
+            style="@style/radiobuttom_reporttab"
             android:background="@drawable/bg_tabcenter_report"
-            android:button="@null"
-            android:gravity="center"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:text="报告详情"
-            android:textColor="@color/textcolor_tab_report"
-            android:textSize="16sp" />
+            android:checked="false"
+            android:text="报告详情" />
 
         <RadioButton
             android:id="@+id/rb_advice_report"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginBottom="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_weight="1"
+            style="@style/radiobuttom_reporttab"
             android:background="@drawable/bg_tabright_report"
-            android:button="@null"
-            android:gravity="center"
-            android:paddingLeft="8dp"
-            android:paddingRight="16dp"
-            android:text="异常解读"
-            android:textColor="@color/textcolor_tab_report"
-            android:textSize="16sp" />
+            android:checked="false"
+            android:text="异常解读" />
 
     </RadioGroup>
 
 
     <View
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1" />
-
 
 </LinearLayout>
