--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <!-- Customize your theme here. -->
         <!--<item name="colorPrimary">@color/colorPrimary</item>-->
         <!--<item name="colorPrimaryDark">@color/main_color_blue</item>-->
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/main_color_blue</item>
     </style>
 
     <style name="AppSplash" parent="Theme.AppCompat.Light.NoActionBar">
@@ -129,6 +129,20 @@
         <item name="android:background">@drawable/bg_blue_corner_shape</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/textsize_h2</item>
+    </style>
+
+    <style name="radiobuttom_reporttab">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:button">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:textColor">@color/textcolor_tab_report</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
