--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,8 +44,10 @@
     <dimen name="login_margin_bottom">25dp</dimen>
     <dimen name="login_margin_vertical">36dp</dimen>
     <dimen name="img_thirdpart_logo">39dp</dimen>
+    <dimen name="btn_share_height">66dp</dimen>
 
     <dimen name="consult_loading_height">122dp</dimen>
+    <dimen name="btn_close_height">44dp</dimen>
 
     <dimen name="img_head">60dp</dimen>
     <dimen name="docinfo_padding">10dp</dimen>
