--- a/app/src/main/res/layout/report_detail_frag.xml
+++ b/app/src/main/res/layout/report_detail_frag.xml
@@ -4,11 +4,42 @@
     android:layout_height="match_parent"
     tools:context="com.ihaozuo.plamexam.view.report.ReportDetailFragment">
 
-    <com.ihaozuo.plamexam.common.pinnedheaderlistview.PinnedHeaderListView
-        android:id="@+id/listview_detail_report"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null"
-        android:scrollbars="none" />
+        android:orientation="horizontal">
+
+        <ListView
+            android:id="@+id/listview_report_detail_slide"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:divider="@null"
+            android:scrollbars="none"
+            android:visibility="gone" />
+
+        <View
+            android:id="@+id/divider_report_detail"
+            android:layout_width="@dimen/divider"
+            android:layout_height="match_parent"
+            android:background="@color/divider_dd"
+            android:visibility="gone" />
+
+        <com.ihaozuo.plamexam.common.pinnedheaderlistview.PinnedHeaderListView
+            android:id="@+id/listview_report_detail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:divider="@null"
+            android:scrollbars="none"
+            android:visibility="visible" />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/layoutPinnedHeader"
+        android:layout_width="match_parent"
+        android:layout_height="44dp" />
 
 </FrameLayout>
