--- a/app/src/main/res/layout/item_reportlist.xml
+++ b/app/src/main/res/layout/item_reportlist.xml
@@ -14,43 +14,39 @@
     <!--app:cardPreventCornerOverlap="true"-->
     <!--app:cardUseCompatPadding="true">-->
 
-
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/item_press_white_gray"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_horizontal_margin">
+        android:layout_height="100dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@drawable/bg_report_list">
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/tvReportDepart"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/androidColorC"
-            android:gravity="center"
-            android:padding="@dimen/activity_horizontal_margin"
-            android:text="上海市中山医院黄浦区分院"
-            android:textColor="@color/white"
+            android:layout_height="match_parent"
+            android:maxLines="2"
+            android:paddingLeft="112dp"
+            android:paddingTop="16dp"
+            android:text="上海市中山医院黄浦区分院上海市中山医院黄浦区分院"
+            android:textColor="@color/gray_33"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tvReportTime"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/img_newslist"
-            android:background="@color/androidColorB"
-            android:gravity="center"
-            android:paddingBottom="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_horizontal_margin"
+            android:layout_height="match_parent"
+            android:paddingLeft="112dp"
+            android:paddingTop="60dp"
             android:text="2016-11-11"
-            android:textColor="@color/white"
+            android:textColor="@color/gray_33"
             android:textSize="20sp" />
 
-    </LinearLayout>
+    </FrameLayout>
 
 
 </android.support.v7.widget.CardView>
