--- a/app/src/main/res/layout/report_detail_frag.xml
+++ b/app/src/main/res/layout/report_detail_frag.xml
@@ -1,45 +1,46 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ihaozuo.plamexam.view.report.ReportDetailFragment">
+    android:orientation="horizontal">
 
-
-    <LinearLayout
+    <ListView
+        android:id="@+id/listview_report_detail_slide"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_weight="2"
+        android:divider="@null"
+        android:scrollbars="none"
+        android:visibility="gone" />
 
-        <ListView
-            android:id="@+id/listview_report_detail_slide"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:divider="@null"
-            android:scrollbars="none"
-            android:visibility="gone" />
+    <View
+        android:id="@+id/divider_report_detail"
+        android:layout_width="@dimen/divider"
+        android:layout_height="match_parent"
+        android:background="@color/divider_dd"
+        android:visibility="gone" />
 
-        <View
-            android:id="@+id/divider_report_detail"
-            android:layout_width="@dimen/divider"
-            android:layout_height="match_parent"
-            android:background="@color/divider_dd"
-            android:visibility="gone" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
         <com.ihaozuo.plamexam.common.pinnedheaderlistview.PinnedHeaderListView
             android:id="@+id/listview_report_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:divider="@null"
             android:scrollbars="none"
             android:visibility="visible" />
 
-    </LinearLayout>
+        <View
+            android:id="@+id/layoutPinnedHeader"
+            android:layout_width="match_parent"
+            android:layout_height="44dp" />
 
-    <View
-        android:id="@+id/layoutPinnedHeader"
-        android:layout_width="match_parent"
-        android:layout_height="44dp" />
+    </FrameLayout>
 
-</FrameLayout>
+
+</LinearLayout>
+
+
+
