--- a/app/src/main/res/layout/consult_grade_frag.xml
+++ b/app/src/main/res/layout/consult_grade_frag.xml
@@ -51,9 +51,12 @@
         <RatingBar
             android:id="@+id/RatingBar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:rating="5"
-            android:stepSize="1"/>
+            android:stepSize="1"
+            android:indeterminateDrawable="@drawable/ratingbar_full"
+            android:progressDrawable="@drawable/ratingbar_full"/>
+
 
         <View
             android:layout_width="match_parent"
