--- a/app/src/main/res/layout/item_newslist.xml
+++ b/app/src/main/res/layout/item_newslist.xml
@@ -1,71 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="98dp"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="@dimen/card_margin"
-    app:cardUseCompatPadding="true">
-    <!--app:cardCornerRadius="4dp"-->
-    <!--app:cardElevation="5dp"-->
-    <!--app:cardMaxElevation="10dp"-->
-    <!--app:cardPreventCornerOverlap="true"-->
-    <!--app:cardUseCompatPadding="true">-->
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="105dp"
+    android:background="@drawable/item_press_white_gray"
+    android:padding="@dimen/padding_10dp">
 
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/img_newslist"
+        android:layout_width="125dp"
+        android:layout_height="85dp"
+        android:layout_marginRight="@dimen/padding_10dp"
+        android:scaleType="centerCrop"
+        fresco:placeholderImage="@drawable/banner"
+        fresco:placeholderImageScaleType="fitXY" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/item_press_white_gray"
-        android:padding="@dimen/padding_10dp"
-        >
+        android:layout_toRightOf="@+id/img_newslist"
+        android:layout_marginTop="@dimen/padding_5dp"
+        android:lineSpacingExtra="2dp"
+        android:maxLines="2"
+        android:text="艾欧尼亚艾欧尼亚艾欧尼亚艾欧尼欧尼亚艾欧尼亚"
+        android:textColor="@color/gray_66"
+        android:textSize="@dimen/textsize_h3_16sp" />
 
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/img_newslist"
-            android:layout_width="100dp"
-            android:layout_height="68dp"
-            android:layout_marginRight="@dimen/padding_10dp"
-            android:scaleType="centerCrop"
-            fresco:placeholderImage="@drawable/banner"
-            fresco:placeholderImageScaleType="fitXY" />
+    <TextView
+        android:id="@+id/tv_commiton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/img_newslist"
+        android:layout_marginBottom="@dimen/padding_5dp"
+        android:layout_alignParentBottom="true"
+        android:maxLines="1"
+        android:text="2016-08-03"
+        android:textColor="@color/gray_99"
+        android:textSize="@dimen/textsize_h5_12sp" />
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/img_newslist"
-            android:maxLines="2"
-            android:layout_marginTop="4dp"
-            android:lineSpacingExtra="2dp"
-            android:text="艾欧尼亚艾欧尼亚艾欧尼亚艾欧尼欧尼亚艾欧尼亚"
-            android:textColor="@color/gray_66"
-            android:textSize="@dimen/textsize_h3_16sp" />
+    <TextView
+        android:id="@+id/btn_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/padding_5dp"
+        android:paddingTop="@dimen/padding_10dp"
+        android:drawablePadding="@dimen/padding_10dp"
+        android:text="分享"
+        android:textColor="@color/gray_99"
+        android:textSize="@dimen/textsize_h5_12sp"
+        android:drawableLeft="@drawable/btn_share"/>
 
-        <TextView
-            android:id="@+id/tv_commiton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/img_newslist"
-            android:layout_alignParentBottom="true"
-            android:maxLines="1"
-            android:text="2016-08-03"
-            android:textColor="@color/gray_99"
-            android:textSize="@dimen/textsize_h5_12sp" />
+</RelativeLayout>
 
-        <TextView
-            android:id="@+id/btn_share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:paddingTop="@dimen/padding_10dp"
-            android:drawablePadding="@dimen/padding_10dp"
-            android:text="分享"
-            android:textColor="@color/gray_99"
-            android:drawableLeft="@drawable/btn_share"/>
-
-    </RelativeLayout>
-
-
-</android.support.v7.widget.CardView>
 
