--- a/app/src/main/res/layout/item_reportlist_detail_child.xml
+++ b/app/src/main/res/layout/item_reportlist_detail_child.xml
@@ -5,6 +5,7 @@
     android:background="@color/white">
 
     <FrameLayout
+        android:id="@+id/content_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
