--- a/app/src/main/res/layout/home_frag.xml
+++ b/app/src/main/res/layout/home_frag.xml
@@ -16,7 +16,8 @@
             android:id="@+id/listview_home"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="@null" />
+            android:headerDividersEnabled="false"
+            android:footerDividersEnabled="false"/>
 
     </FrameLayout>
 
