--- a/app/src/main/res/layout/news_list_frag.xml
+++ b/app/src/main/res/layout/news_list_frag.xml
@@ -9,6 +9,7 @@
         android:id="@+id/NewsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null" />
+        android:headerDividersEnabled="false"
+        android:footerDividersEnabled="false" />
 
 </LinearLayout>
