--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,7 @@
     <dimen name="padding_10dp">10dp</dimen>
     <dimen name="padding_8dp">8dp</dimen>
     <dimen name="padding_9dp">9dp</dimen>
+    <dimen name="padding_5dp">5dp</dimen>
     <dimen name="divider">0.8dp</dimen>
     <dimen name="divider_1dp">1dp</dimen>
     <dimen name="divider_2dp">2dp</dimen>
