--- a/app/src/main/res/layout/settings_dialog.xml
+++ b/app/src/main/res/layout/settings_dialog.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="270dp"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <FrameLayout
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="@dimen/padding_12dp">
@@ -53,7 +53,7 @@
             android:padding="10dp"
             android:text="取消"
             android:textColor="@color/main_color_blue"
-            android:textSize="20sp" />
+            android:textSize="17sp" />
 
         <View
             android:layout_width="@dimen/divider"
@@ -68,8 +68,8 @@
             android:background="@drawable/item_press_white_gray"
             android:gravity="center"
             android:padding="10dp"
-            android:text="确定"
+            android:text="确认"
             android:textColor="@color/main_color_blue"
-            android:textSize="20sp" />
+            android:textSize="17sp" />
     </LinearLayout>
 </LinearLayout>
