--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -132,8 +132,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">@dimen/padding_15dp</item>
-        <item name="android:layout_marginLeft">44dp</item>
-        <item name="android:layout_marginRight">44dp</item>
+        <item name="android:layout_marginLeft">@dimen/padding_15dp</item>
+        <item name="android:layout_marginRight">@dimen/padding_15dp</item>
         <item name="android:layout_marginTop">@dimen/padding_9dp</item>
         <item name="android:background">@drawable/bg_blue_corner_shape</item>
         <item name="android:textColor">@color/white</item>
@@ -154,7 +154,6 @@
         <item name="android:textSize">18sp</item>
     </style>
 
-<!--<<<<<<< HEAD-->
 
     <style name="ACPLDialog">
         <item name="android:windowFrame">@null</item>
@@ -162,6 +161,7 @@
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
+
     <style name="umeng_socialize_action_bar_itemlayout">
         <item name="android:layout_height">fill_parent</item>
         <item name="android:layout_width">fill_parent</item>
@@ -216,8 +216,10 @@
     </style>
 
     <style name="umeng_socialize_shareboard_animation">
-        <item name="android:windowEnterAnimation">@anim/umeng_socialize_shareboard_animation_in</item>
-        <item name="android:windowExitAnimation">@anim/umeng_socialize_shareboard_animation_out</item>
+        <item name="android:windowEnterAnimation">@anim/umeng_socialize_shareboard_animation_in
+        </item>
+        <item name="android:windowExitAnimation">@anim/umeng_socialize_shareboard_animation_out
+        </item>
     </style>
 
     <style name="Theme.UMDialog" parent="android:style/Theme.Dialog">
@@ -250,8 +252,6 @@
         <item name="android:layout_marginTop">6dp</item>
         <item name="android:layout_marginBottom">6dp</item>
     </style>
-
-
 
 
 </resources>
