--- a/app/src/main/res/layout/news_list_frag.xml
+++ b/app/src/main/res/layout/news_list_frag.xml
@@ -5,11 +5,19 @@
 
     <include layout="@layout/actionbar" />
 
-    <ListView
-        android:id="@+id/NewsList"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_Layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:headerDividersEnabled="false"
-        android:footerDividersEnabled="false" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/NewsList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:headerDividersEnabled="false"
+            android:footerDividersEnabled="false" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </LinearLayout>
